--- a/perldoc/ko/perl/5.10/perlsec.pod
+++ b/perldoc/ko/perl/5.10/perlsec.pod
@@ -1,5 +1,5 @@
 
-=encoding euc-jp
+=encoding utf-8
 
 =head1 NAME
 
@@ -9,7 +9,7 @@ perlsec - Perl security
 
 =end original
 
-perlsec - Perl のセキュリティ
+perlsec - Perl 의 시큐리티 
 
 =head1 DESCRIPTION
 
@@ -25,14 +25,14 @@ untrustworthy) programs to accomplish its purposes.
 
 =end original
 
-Perlは、プログラムが setuid や setgid されるような特別な権限を付加されて
-実行されたときでもセキュリティ保持が容易になるように設計されています。
-スクリプトの一行ごとの多重置換を行うことに基づいているような大部分の
-コマンドラインシェルとは違って、Perl は隠れた障害が少ないような、
-より便利な評価手法を用いています。
-それに加えて Perl はより多くの組み込み関数を持っているので、
-ある目的を達成するために(信頼できないかもしれないような)
-外部プログラムを使うことが少なくてすむのです。
+Perl은, 프로그램이 setuid 나 setgid 되는 것 같은 특별한 권한을 부가되어
+실행된 때에도 시큐리티 유지가 용이하록 설계되어 있습니다.
+스크립트의 한줄마다 다중치환을 수행하는 것에 기본으로 한 대부분의
+커맨드라인셸 과는 달리, Perl 은 숨겨진 장애가 적으며,
+보다 편리한 평가방법을 사용하고 있습니다.
+그에 더해서 Perl 은 보다 많은 내장함수를 가지고 있으므로,
+어떤 목적을 달성하기 위해 (신뢰할 수 없을지 모르는)
+외부 프로그램을 사용하는 것이 적어도 됩니다.
 
 =begin original
 
@@ -47,17 +47,16 @@ the remainder of your script.
 
 =end original
 
-Perl は、そのプログラムが異なる実ユーザー ID、実効ユーザー ID、実グループ ID、
-実効グループ ID を使って実行されることを検出したときに、
-自動的に I<汚染モード> (taint mode) と呼ばれる特別なセキュリティチェックの
-セットを有効にします。
-UNIX パーミッションにおける setuid ビットはモード 04000 で、
-setgid ビットはモード 02000 です。
-これらは重複してセットすることもできます。
-汚染モードは、コマンドラインフラグ B<-T> を使って陽に有効にすることもできます。
-このフラグはサーバープログラムであるとか、
-CGI スクリプトのような、他の誰かにすりかわって実行されるプログラムに
-使うことを B<強く> 勧めます。
+Perl 은, 그 프로그램이 다른 실제 유저 ID, 실효 유저 ID, 실제 그룹 ID,
+실효 그룹 ID를 사용해 실행되는 것을 검출한 때에,
+자동적으로 I<오염모드> (taint mode) 라고 불리는 특별한 시큐리티 체크의
+설정을 유효화합니다.
+UNIX 퍼미션에 의한 setuid 비트는 모드 04000 으로, setgid 비트는
+모드 02000입니다.
+이것들은 중복해서 설정할 수도 있습니다.
+오염모드는, 커맨드라인플래그 B<-T> 를 사용해서 항상 유효화할 수 있습니다.
+이 플래그는 서버 프로그램이나, CGI 스크립트같은 다른 누군가에 조종되어
+실핼되는 프로그램에 사용하는 것을 B<강력하게> 추천합니다.
 
 =begin original
 
@@ -71,14 +70,14 @@ program more secure than the corresponding C program.
 
 =end original
 
-このモードで動作しているとき、Perl は明白な罠と隠れた罠の両方に対処するために
-I<汚染検査> (taint check) と呼ばれる特別な警戒を行います。
-これらのチェックの幾つかは、単純です。
-path ディレクトリが他から書き込み可能でないことを検査するといったことがそうです。
-注意深いプログラマーは常にこれらのことはチェックしています。
-このほかのチェックはしかしながら、言語自身によって最も良くサポートされます。
-そして、これらのチェックは特に set-id された Perl プログラムを
-対応する C プログラムよりも安全にするのに貢献するのです。
+이 모드로 동작하고 있을 때, Perl 은 명백한 함정과 감춰진 함정 양쪽에 대처하기
+위해 I<오염검사> (taint chekc) 라고 불리는 특별한 경계를 수행합니다.
+이것들의 체크 중 몇개인가는 단순합니다.
+path 디렉토리가 다른곳에서 쓰기 가능하지 않은 것을 검사하는 것도 그렇습니다.
+주의 깊은 프로그래머는 항상 이것들의 체크를 하고 있습니다.
+그 외의 체크는 언어자신에 의해 가장 좋게 지원되었습니다.
+그리고, 이것들의 체크는 특히 set-id 된 Perl 프로그램을 
+대응하는 C 프로그램보다도 안전하게 하는 것에 적합한 것입니다.
 
 =begin original
 
@@ -95,17 +94,17 @@ directories, or processes, B<with the following exceptions>:
 
 =end original
 
-自分のプログラムの外側から来たデータをプログラムの外の何かに影響を
-及ぼすために使うことは、少なくともアクシデントででもなければ、できません。
-すべてのコマンドライン引数、環境変数、ロケール情報(L<perllocale> を参照)、
-幾つかのシステムコールの結果(C<readdir()>, C<readlink()>, C<shmread()> の変数、
-C<msgrcv()> が返したメッセージ、パスワード、C<getpwxxx()> 呼び出しが返した
-gecos フィールドとシェルフィールド)、すべてのファイル入力といったものは
-“汚染された”(tainted) と目印が付けられます。
-汚染されたデータは直接、間接を問わずサブシェルを起動するコマンドに使うことも、
-ファイルやディレクトリ、プロセスに変更を加えるようなコマンドに
-使うこともできません。
-但し B<以下の例外> があります。
+자신의 프로그램을 밖에서 온 데이터를 프로그램의 밖의 무엇인가에 영향을
+받기 위해 사용하는 것은, 적어도 사고가 아닌 한 불가능합니다.
+모든 커맨드라인 인수, 환경변수, 로케일 정보(L<perllocale> 을 참조),
+몇 가지의 시스템 콜의 결과(C<readdir()>, C<readlink()>, C<shmread()> 의 변수,
+C<msgrcv()> 가 반환한 메시지, 패스워드, C<getpwxxx()> 호출이 반환한
+gecos 필드와 셸필드), 모든 파일입력 같은 것은 
+"오염되었다"(tainted) 라고 인지됩니다.
+오염된 데이터는 직접, 간접을 불문하고 서브 셸을 기동하는 커맨드에 사용하는 것도
+파일이나 디렉토리, 프로세스에 견경을 가하는 따위의 커맨드에 사용 할 수도 
+없습니다.
+단 B<아래의 예외> 가 있습니다.
 
 =over 4
 
@@ -117,7 +116,7 @@ Arguments to C<print> and C<syswrite> are B<not> checked for taintedness.
 
 =end original
 
-C<print> と C<syswrite> の引数に対する汚染検査は B<行われません>。
+C<print> 와 C<syswrite> 의 인수에 대한 오염검사는 B<수행되지 않습니다>.
 
 =item *
 
@@ -127,7 +126,7 @@ Symbolic methods
 
 =end original
 
-シンボリックメソッド
+심볼릭 메소드
 
     $obj->$method(@args);
 
@@ -137,7 +136,7 @@ and symbolic sub references
 
 =end original
 
-とシンボリックサブルーチンリファレンス
+와 심볼릭 서브루틴 리퍼런스
 
     &{$foo}(@args);
     $foo->(@args);
@@ -152,7 +151,7 @@ in which case they are able to run arbitrary external code.
 
 =end original
 
-は汚染性がチェックされません。
+은 오염성이 체크되지 않습니다.
 This requires extra carefulness
 unless you want external data to affect your control flow.  Unless
 you carefully limit what these symbolic values are, people are able
@@ -168,7 +167,7 @@ Hash keys are B<never> tainted.
 
 =end original
 
-ハッシュのキーは B<決して> 汚染されません。
+해쉬의 키는 B<결코> 오염되지 않습니다.
 
 =back
 
@@ -195,9 +194,9 @@ The keys of a hash are B<never> tainted.
 
 =end original
 
-汚染は各スカラ値に結び付けられるので、配列の幾つかの要素が汚染されていて、
-そのほかの要素はそうではないということもありえます。
-ハッシュのキーは B<決して> 汚染されません。
+오염은 각 스칼라 값에 붙여지기에, 배열의 ë가지 요소가 오염되었다고 해서,
+그 외의 요소는 그렇지 않다고 할 수도 있습니다.
+해쉬의 키는 B<결코> 오염되지 않습니다.
 
 =begin original
 
@@ -205,7 +204,7 @@ For example:
 
 =end original
 
-例を示します:
+예를 보도록 하죠:
 
 =begin original
 
@@ -220,14 +219,14 @@ For example:
 
 =end original
 
-    $arg = shift;		# $arg は汚染された
-    $hid = $arg, 'bar';		# $hid も汚染された
-    $line = <>;			# 汚染された
-    $line = <STDIN>;		# これも汚染された
+    $arg = shift;		# $arg 는 오염되었다.
+    $hid = $arg, 'bar';		# $hid 도 오염되었다.
+    $line = <>;			# 오염되었다.
+    $line = <STDIN>;		# 이것도 오염되었다.
     open FOO, "/home/me/bar" or die $!;
-    $line = <FOO>;		# まだ汚染されている
-    $path = $ENV{'PATH'};	# 汚染されているが、下記を参照のこと
-    $data = 'abc';		# 汚染されていない
+    $line = <FOO>;		# 아직 오염되었다.
+    $path = $ENV{'PATH'};	# 오염되었지만 아래를 참조
+    $data = 'abc';		# 오염되지 않았다. 
 
 =begin original
 
@@ -239,11 +238,11 @@ For example:
 
 =end original
 
-    system "echo $arg";		# 安全ではない
-    system "/bin/echo", $arg;	# 安全ではないと考えられる
-				# (Perl は /bin/echo について知らない)
-    system "echo $hid";		# 安全ではない
-    system "echo $data";	# PATHを設定するまでは安全ではない
+    system "echo $arg";		# 안전하지 않다.
+    system "/bin/echo", $arg;	# 안전하지 않다고 생각됨
+				# (Perl 은 /bin/echo 에 대해 알지 못함)
+    system "echo $hid";		# 안전하지 않다.
+    system "echo $data";	# PATH 를 설정하기까지는 안전하지 않다. 
 
 =begin original
 
@@ -251,7 +250,7 @@ For example:
 
 =end original
 
-    $path = $ENV{'PATH'};	# $path が汚染された
+    $path = $ENV{'PATH'};	# $path 가 오염되었다. 
 
     $ENV{'PATH'} = '/bin:/usr/bin';
     delete @ENV{'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};
@@ -263,8 +262,8 @@ For example:
 
 =end original
 
-    $path = $ENV{'PATH'};	# $path は汚染されていない
-    system "echo $data";	# これで安全!
+    $path = $ENV{'PATH'};	# $path 는 오염되지 않았다.
+    system "echo $data";	# 이것으로 안전! 
 
 =begin original
 
@@ -273,8 +272,8 @@ For example:
 
 =end original
 
-    open(FOO, "< $arg");	# OK - 読み込みのみのファイル
-    open(FOO, "> $arg"); 	# Not OK - 書き込みしようとしている
+    open(FOO, "< $arg");	# OK - 읽어들이기만 하는 파일
+    open(FOO, "> $arg"); 	# Not OK - 쓰려고 하고 있음.
 
     open(FOO,"echo $arg|");	# Not OK
     open(FOO,"-|")
@@ -286,7 +285,7 @@ For example:
 
 =end original
 
-    $shout = `echo $arg`;	# 安全でない。$shoutは汚染された。
+    $shout = `echo $arg`;	# 안전하지 않음 $shout는 오염되었다. 
 
 =begin original
 
@@ -295,8 +294,8 @@ For example:
 
 =end original
 
-    unlink $data, $arg;		# 安全でない
-    umask $arg;			# 安全でない
+    unlink $data, $arg;		# 안전하지 않음 
+    umask $arg;			# 안전하지 않음
 
 =begin original
 
@@ -306,9 +305,9 @@ For example:
 
 =end original
 
-    exec "echo $arg";		# 安全でない
-    exec "echo", $arg;		# 安全でない
-    exec "sh", '-c', $arg;	# とても安全ではない!
+    exec "echo $arg";		# 안전하지 않음 
+    exec "echo", $arg;		# 안전하지 않음 
+    exec "sh", '-c', $arg;	# 매우 안전하지 않음 
 
 =begin original
 
@@ -317,8 +316,8 @@ For example:
 
 =end original
 
-    @files = <*.c>;		# 安全でない (readdir() のようなものを使う)
-    @files = glob('*.c');	# 安全でない (readdir() のようなものを使う)
+    @files = <*.c>;		# 안전하지 않음(readdir()같은 것을 사용)
+    @files = glob('*.c');	# 안전하지 않음 (readdir() 같은 것을 사용)
 
     # In Perl releases older than 5.6.0 the <*.c> and glob('*.c') would
     # have used an external program to do the filename expansion; but in
@@ -332,8 +331,8 @@ For example:
 
 =end original
 
-    $bad = ($arg, 23);		# $bad は汚染されているかも
-    $arg, `true`;		# 安全でない (実際はそうでなくても)
+    $bad = ($arg, 23);		# $bad 는 오염되어 있을 지도 모름
+    $arg, `true`;		# 안전하지 않음 (실제는 그렇지 않더라도) 
 
 =begin original
 
@@ -342,8 +341,8 @@ something like "Insecure dependency" or "Insecure $ENV{PATH}".
 
 =end original
 
-安全でないことをやろうとすると、"Insecure dependency" や 
-"Insecure $ENV{PATH}" のような致命的エラーとなるでしょう。
+안전하지 않은 것을 하려고 하면 "Insecure dependency" 나
+"Insecure $ENV{PATH}" 같은 치명적 에러가 날겁니다.
 
 =begin original
 
@@ -355,7 +354,7 @@ with a ternary conditional
 
 The exception to the principle of "one tainted value taints the whole
 expression" is with the ternary conditional operator C<?:>.
-3 項条件を使ったコード
+3항 조건을 사용한 코드
 
     $result = $tainted_value ? "Untainted" : "Also untainted";
 
@@ -365,7 +364,7 @@ is effectively
 
 =end original
 
-というのは事実上
+같은 것은 사실상
 
     if ( $tainted_value ) {
         $result = "Untainted";
@@ -379,11 +378,11 @@ it doesn't make sense for C<$result> to be tainted.
 
 =end original
 
-なので、C<$result> が汚染されたと考えるのは意味がありません。
+이기때문에, C<$result> 가 오염되었다고 생각하는 것으 의미가 없습니다.
 
 =head2 Laundering and Detecting Tainted Data
 
-(汚染されたデータの検出と洗浄)
+(오염된 데이터의 검출과 세정)
 
 =begin original
 
@@ -395,11 +394,11 @@ Or you may be able to use the following C<is_tainted()> function.
 
 =end original
 
-ある変数が汚染されたデータを保持しているかどうかを検査するため、そして、
-"Insecure dependency" メッセージの引き金になる可能性があるかどうかを
-検査するために、CPAN にあり、5.8.0 からは Perl に含まれている
-Scalar::Util モジュールの C<tainted()> 関数を使えます。
-あるいは、以下のような関数 C<is_tainted()> を使うことができます。
+어떤 변수가 오염된 데이터를 가지고 있는지를 검사하기 위해, 그리고,
+"Insecure dependency" 메시지의 원인이 될 가능성이 있는지를 검사하기 위해
+CPAN에 있고, 5.8.0 부터는 Perl 에 포함되어 있는 
+Scalar::Util 모듈의 C<tainted()> 함수를 사용할 수 있습니다.
+혹은, 아래처럼 함수 C<is_tainted()> 를 사용할 수 있습니다.
 
     sub is_tainted {
         return ! eval { eval("#" . substr(join("", @_), 0, 0)); 1 };
@@ -416,13 +415,12 @@ same expression, the whole expression is considered tainted.
 
 =end original
 
-この関数はある式のどこかにある汚染されたデータが式全体を汚染してしまうことを
-利用しています。
-これはすべての演算子に対して、そのすべての引数が汚染されているかどうかの
-検査をするので効率は良くないでしょう。
-その代わりに、一部の式において汚染された値にアクセスして式全体が
-汚染されたとみなされるような場合には、もっと効率が良くて
-保守的な方法が使われます。
+이 함수는 어떤 식의 어디인가에 있는 오염된 데이터가 식 전체를 오염해버리는 것을
+이용하고 있습니다.
+이것은 모든 연산자에 대해, 그 모든 인수가 오염되어있는 지의 검사를 하기 때문에
+효율은 좋지 않습니다.
+대신에, 일부의 시기에 대해 오염된 값에 접근하고 식 전체가
+오염되었다고 간주하는 경우에는, 더욱 효율이 좋은 보수적인 방법이 사용됩니다.
 
 =begin original
 
@@ -440,19 +438,18 @@ characters that you never thought of.
 
 =end original
 
-しかし、汚染の検査は面倒です。
-あなたのデータの汚染を取り除くだけということもあるでしょう。
-値はハッシュのキーとして使うことで浄化されます; さもなければ、
-汚染検査機構をバイパスするためのただ一つの方法は、
-マッチした正規表現のサブパターンを参照することです。
-Perl は、あなたが $1、$2 などを使って部分文字列を参照したときに、
-あなたがパターンを記述したときに何を行うのかを知っていたと仮定します。
-つまり、汚染されていないものを束縛しないか、機構全体を無効にするということです。
-これは、変数がなんらかの悪い文字を持っているかどうかを
-検査するというのではなく、変数が良い文字のみを持っていることの
-検査には都合が良いです。
-これは(あなたが考えもしないような)悪い文字を見失うことがあまりにも
-簡単であるからです。
+하지만, 오염의 검사는 귀찮습니다.
+당신의 데이터의 오염을 없애기만 하는 것도 있을 겁니다.
+값은 해쉬의 키로써 사용하는 것도 정화됩니다; 그렇지 않으면,
+오염검사기구를 바이패스하기 위한 단 하나의 방법은,
+매치한 정규표현의 서브패턴을 참조하는 것입니다.
+Perl 은 당신이 $1, $2 등을 사용해서 부분문자열을 참조한 때에,
+당신이 패턴을 기술한 때에 뭔가를 수행하는 가를 알고 있다고 가정합니다.
+즉, 오염되지 않은 것을 동결하지 않거나, 기구전체를 무효화하는 것입니다.
+이것은 변수가 어떤 나쁜 문자를 가지고 있는 지를 검사하는 것이 아니라,
+변수가 좋은 문자만을 가지고 있는 것의 검사에 적합합니다.
+이것은 (당신이 생각하지 못할) 나쁜 문자를 놓쳐버리는 것이 너무나도
+간단하기 때문입니다.
 
 =begin original
 
@@ -462,9 +459,8 @@ or a dot.
 
 =end original
 
-以下に示す例は、データに“語”(アルファベット、数字、アンダースコア)の
-文字、ハイフン、アットマーク、ドット以外のものが入っていないことを
-検査するものです。
+아래에 보이는 예제는, 데이터에 "문자"(알파벳, 숫자, 언더바)의 
+문자, 하이픈, 앳마크, 점 이외의 것이 들어 있지 않은 가를 검사하는 것입니다.
 
     if ($data =~ /^([-\@\w.]+)$/) {
 	$data = $1; 			# $data now untainted
@@ -485,15 +481,15 @@ a child of lesser privilege.
 
 =end original
 
-これはかなり安全です。
-なぜなら C<\w+> は通常シェルのメタ文字には
-マッチしませんし、ドットやダッシュなどのシェルにとって特別な意味を
-持つようなものにもマッチしないからです。
-C</.+/> を使うのは、これはすべてを通してしまうのに Perl はそれを
-チェックしませんから、理論的には安全ではありません。
-汚染を取り除くときには、自分のパターンについて十二分に注意せねばなりません。
-正規表現を使ったデータの洗浄は、先に説明したより低い特権度の子プロセスを
-fork するための戦略を使うまでは汚れたデータの汚染除去 B<のみ> の機構です。
+이것은 꽤 안전합니다.
+왜냐면, C<\w+> 는 통상 셸의 메타 문자에는 매치하지 않고, 점 이나
+대쉬 등의 셸에 있어서 특별한 의미를 가지는 것에도 매치하지 않기 때문입니다.
+C</.+/> 를 사용하는 것은, 이것은 모든 것을 통해버리는 것에 Perl 은 그것을
+체크하지 않기에, 이론적으로는 안전하지 않습니다.
+오염을 제거할 때에는, 자신의 패턴에 대해서 충분히 주의하지 않으면 안됩니다.
+정규표현을 사용한 데이터의 세정은 앞서 설명한 대로 낮은 우선순위의 아들
+프로세스를 fork 하기 위한 전력을 사용하기 까지는 오염된 데이터의
+오염제거 B<만> 의 기구입니다.
 
 =begin original
 
