--- a/trunk/perldoc/ko/perl/5.10/perlsec.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlsec.pod
@@ -503,19 +503,19 @@ block.  See L<perllocale/SECURITY> for further discussion and examples.
 
 =end original
 
-先の例では、C<use locale> が有効であるときには C<$data> の
-汚染除去を行いません。
-なぜなら、C<\w> にマッチする文字はロケールによって決定されるからです。
-Perl は、ロケールで決まることを、それがプログラムの外から来たデータから
-構成されているという理由によって信用できないものとみなします。
-もしロケールを考慮したプログラムを書いていて、C<\w> を含んだ正規表現で
-データの洗浄を行いたいというのなら、式の置かれたのと同じブロックの前の部分に
-C<no locale>を置きます。
-L<perllocale/SECURITY> に詳しい説明と例があります。
+앞의 예제에서, C<use locale> 이 유효한 때에는 C<$data> 의 오염제거를 
+수행하지 않습니다.
+왜냐면, C<\w> 에 매치하는 문자는 로케일에 의해 결정되기 때문입니다.
+Perl 은, 로케일로 결정된 것을, 그것이 프로그램의 밖에서 온 데이터에서
+구성되는 이유에 의해 신용할 수 없는 것으로 간주합니다.
+만약 로케일을 고려한 프로그램을 만들고 있고, C<\w> 를 포함한 정규표현으로
+데이터의 세정을 수행하고 싶다면, 식이 놓여진 것과 같은 블록의 앞 부분에
+C<no locale> 을 둡니다.
+L<perllocale/SECURITY> 에 자세한 설명과 예제가 있습니다.
 
 =head2 Switches On the "#!" Line
 
-("#!" 行のスイッチ)
+("#!" 줄의 스위치)
 
 =begin original
 
@@ -530,19 +530,18 @@ Unix-like environments that support #! and setuid or setgid scripts.)
 
 =end original
 
-自分の作ったスクリプトをコマンドのように使えるようにしたとき、システムは
-perl に対して、スクリプトの #! の行からコマンドラインスイッチを渡します。
-Perl は、setuid(あるいは setgid) されたスクリプトに与えられた
-コマンドラインスイッチが #! 行にあるものと本当に一致するかどうかを検査します。
-一部の UNIX や UNIX 風の環境では #! 行には一つのスイッチしか置けないので、
-そういったシステムでは C<-w -U> といった形式ではなく
-C<-wU> のようにする必要があるでしょう(これは #! をサポートしていて、
-setuid や setgid スクリプトが使える UNIX 環境や UNIX に似た環境でのみ
-行なわれることです)。
+스스로 만든 스크립트를 커맨드처럼 사용할 수 있도록 한 때, 시스템은
+Perl 에 대해, 스크릅트의 #! 의 줄부터 커맨드라인 스위치를 넘깁니다.
+Perl 은, setuid(혹은 setgid) 된 스크립트에 주어진 커맨드라인 스위치가
+#! 줄에 있는 것과 정말로 일치하는 가 어떤가를 검사합니다.
+일부의 UNIX 나 UNIX 풍의 환경에서는 #! 줄에는 하의 스위치만 놓을 수 없기에,
+그런 시스템에서는 C<-w -U> 같은 형식이 아닌 C<-wU> 처럼
+할 필요가 있을 겁니다(이것은 #! 를 지원하고 있고, setuid 나 setgid 스크립트가
+사용할 수 있는 UNIX 환경이나 UNIx 같은 환경에서만 수행되어지는 것입니다).
 
 =head2 Taint mode and @INC
 
-(汚染検査モードと @INC)
+(오염검사모드와 @INC)
 
 =begin original
 
@@ -557,10 +556,10 @@ therefore permitted.
 
 =end original
 
-汚染検査モード(C<-T>) が有効のとき、"." ディレクトリは C<@INC> から
-取り除かれ、環境変数 C<PERL5LIB> と C<PERLLIB> は Perl から無視されます。
-それでも、L<perlrun> で説明されている C<-I> コマンドラインオプションを
-使うことで、プログラムの外部から C<@INC> を調整出来ます。
+오염검사모드(C<-T>) 가 유효한 때, "." 디렉토리는 C<@INC> 부터
+없어지고, 환경변수 C<PERL5LIB> 과 C<PERLLIB> 은 Perl 에서 무시됩니다.
+그래도, L<perlrun> 에서 설명하고 있는 C<-I> 커맨드 라인 옵션을
+사용하는 것으로, 프로그램의 밖에서 C<@INC> 를 조정할 수 있습니다.
 The two environment variables are ignored because
 they are obscured, and a user running a program could be unaware that
 they are set, whereas the C<-I> option is clearly visible and
@@ -574,8 +573,8 @@ the C<lib> pragma, e.g.:
 
 =end original
 
-プログラムを修正することなく C<@INC> を修正するもう一つの方法は、
-C<lib> プラグマを使うことです。つまり:
+프로그램을 수정하지 않고 C<@INC> 를 수정하는 다른 하나의 방법은
+C<lib> 프라그마를 사용하는 것입니다. 즉:
 
   perl -Mlib=/foo program
 
@@ -607,7 +606,7 @@ problem will be reported:
 
 =head2 Cleaning Up Your Path
 
-(実行パスを洗浄する)
+(실행경로를 청소한다)
 
 =begin original
 
@@ -624,19 +623,17 @@ your PATH, it makes sure you set the PATH.
 
 =end original
 
-"Insecure C<$ENV{PATH}>" メッセージに対処するために、C<$ENV{'PATH'}> に
-既知の値を設定する必要があります。
-そして path に含まれている各ディレクトリは、絶対パスで、
-そのディレクトリの所有者やグループ以外からの書き込みを
-禁じていなければなりません。
-実行しようとしているファイルをフルパスで
-書いたとしてもこのメッセージがでるので、びっくりすることがあるかもしれません。
-このメッセージはプログラムのフルパスを書かなかったから出力されるではなく、
-環境変数 PATH を設定しなかったり安全でない値を
-設定したりしたために出力されるのです。
-Perl は対象となっている実行ファイルが自分自身を方向転換したり、
-PATH を参照して別のプログラムを起動したりするかどうかを知ることができないので、
-確実に自分で PATH を設定するようにします。
+"Insecure C<$ENV{PATH}>" 메시지에 대처하기 위해, C<$ENV{'PATH'}> 에
+즉시 알수 있는 값을 설정할 필요가 있습니다.
+그리고 path 에 포함되어 있는 각 디렉토리는 절대경로로,
+그 디렉토리의 소유자나 그룹이외의 쓰기를 금지하지 않으면 안됩니다.
+실행하려고 한 파일을 전체 경로로 쓰더라도 이 메시지가 나오기때문에,
+놀랄 지도 모릅니다. 이 메시지는 프로그램의 전체 경로를 쓰지 않았기 때문에
+출력되는 것이 아니라, 환경변수 PATH 를 설정하지 않았거나, 안전하지 않은 값을
+설정하거나 했기 때문에 출력되는 것입니다.
+Perl 은 대상이 된 실행파일이 자기자신ㅡㄹ 방향전환하거나,
+PATH 를 참조하고 별도의 프로그램을 기동하거나 할지를 알 수 없기 때문에,
+확실하게 자신이 PATH를 설정하도록 합니다.
 
 =begin original
 
@@ -648,12 +645,12 @@ setid and taint-checking scripts.
 
 =end original
 
-この問題を引き起こす環境変数は PATH だけではありません。
-一部のシェルでは、IFS、CDPATH、ENV、BASH_ENV のような環境変数を
-使っていますから、Perl はこれらの変数がからであるかあるいは
-サブプロセスが起動したときに汚染されていないかどうかチェックします。
-setid していたり、汚染検査をするスクリプトに
-以下のような行を付け加えたくなるかしれません。
+이 문제를 일으키는 환경변수는 PATH 만이 아닙니다.
+일부의 셸에서는, IFS, CDPATH, ENV, BASH_ENV 같은 환경변수를
+사용하고 있기때문에, Perl 은 이런것들의 변수에서 온 것인지, 혹은
+서브프로세스가 기동한 때에 오염되지 않은 지를 체크합니다.
+setid 했거나, 오염검사를 하는 스크립트에 아래같은 줄을
+더하고 싶을 지도 모릅니다.
 
     delete @ENV{qw(IFS CDPATH ENV BASH_ENV)};   # Make %ENV safer
 
@@ -669,15 +666,15 @@ prevent stupid mistakes, not to remove the need for thought.
 
 =end original
 
-このほかの、汚染された値を使っているかどうかに注意を払わないような
-操作によってトラブルに巻込まれる可能性もあります。
-ユーザーが使うようなファイル名を扱うファイル検査の使用を賢明なものにします。
-可能であれば、ファイルをオープンした B<その後で> 適切にスペシャルユーザー
-(グループも!)の特権を落とします。
-Perl はあなたが読み出しのために汚染されたファイル名を使ってファイルを
-オープンすることを妨げませんから、出力の際には注意しましょう。
-汚染検査機構はばかばかしいミスに対応するためのものであって、
-必要なことを取り除くものではありません。
+이 외의, 오염된 값을 사용하고 있는지 어떤지 주의를 기울이지 않는 조작에 의해
+문제가 발생할 가능성도 있습니다.
+유저가 사용할 파일이름을 취급하는 파일 검사의 사용을 현명한 것으로 합니다.
+가능하다면, 파일을 오픈한 B<그 뒤에> 적절히 스페셜 유저(그룹도!) 특권을
+없앱니다.
+Perl 은 당신이 읽어내기 위해 오염된 파일이름을 사용해 파일을 
+오픈하는 것을 막지 않기 때문에, 출력 할 때에는 주의합시다.
+오염검사기구는 어리석은 미스에 대응하기 위한 것이지.
+필요한 것을 삭제하는 것이 아닙니다.
 
 =begin original
 
@@ -689,11 +686,11 @@ subterfuge will be required.
 
 =end original
 
-Perl は、C<system> や C<exec> に対してシェルのワイルドカードが
-あるかもしれないような文字列ではなく陽にパラメータリストを渡した場合には、
-ワイルドカードの展開のためにシェルを呼び出したりしません。
-残念なことに、C<open>、C<glob>、逆クォートといったものはそういった別の
-呼び出し手順を提供していないので、より多くのごまかしが必要とされます。
+Perl 은, C<system> 이나 C<exec> 에 대해서 셸의 와일드 카드가
+있을지 모르는 문자열이 아닌, 인수 리스트를 건낸 경우에는,
+와일드 카드 전개를 위해 셸을 호출하거나 하지 않습니다.
+유감스럽게도, C<open>, C<glob>, 역 따옴표 같은 것은 그런 별도의
+호출 수순을 제공하고 있지 않기 때문에 보다 많은 조작이 필요하게 됩니다.
 
 =begin original
 
